--- a/index.html
+++ b/index.html
@@ -17,13 +17,13 @@
             <a href="#" class="toggle-button"><i class="fa-solid fa-bars"></i></a>
             <div class="navbar-links">
               <ul>
-                <li><a href="file:///C:/Users/GAMING%20STORE/Desktop/gym%20page/index.html">Home</a></li>
+                <li><a href="https://samurai-394.github.io/Engage-Gym/">Home</a></li>
                 <li><a href="#">About</a></li>
                 <li><a href="#">Contact</a></li>
-                <li><a href="#offers">Offers</a></li>
+                <li><a href="https://samurai-394.github.io/Engage-Gym/#offers">Offers</a></li>
                 <li><a href="#">Gallary</a></li>
                 <li><a href="#">Blog</a></li>
-                <a href="file:///C:/Users/GAMING%20STORE/Desktop/gym%20page/login%20page/index.html" class="join">Join</a>
+                <a href="https://samurai-394.github.io/Engage-Gym-Signup/" class="join">Join</a>
               </ul>
             </div>
           </nav>
